<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_a_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/a"
            app:layout_constraintEnd_toStartOf="@id/input_b_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_b_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/b"
            app:layout_constraintBaseline_toBaselineOf="@id/input_a_layout"
            app:layout_constraintEnd_toStartOf="@id/input_c_layout"
            app:layout_constraintStart_toEndOf="@id/input_a_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_c_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/c"
            app:layout_constraintBaseline_toBaselineOf="@id/input_a_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_b_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_alpha_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/alpha"
            app:layout_constraintEnd_toStartOf="@id/input_beta_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_a_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_beta_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/beta"
            app:layout_constraintBaseline_toBaselineOf="@id/input_alpha_layout"
            app:layout_constraintEnd_toStartOf="@id/input_gamma_layout"
            app:layout_constraintStart_toEndOf="@id/input_alpha_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_beta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_gamma_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/gamma"
            app:layout_constraintBaseline_toBaselineOf="@id/input_alpha_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_beta_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_gamma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_area_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/area"
            app:layout_constraintEnd_toStartOf="@id/input_height_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_gamma_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_height_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            app:layout_constraintBaseline_toBaselineOf="@id/input_area_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_area_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_ax_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ax"
            app:layout_constraintEnd_toStartOf="@id/input_ay_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_area_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_ax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_ay_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ay"
            app:layout_constraintBaseline_toBaselineOf="@id/input_ax_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_ax_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_ay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_bx_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/bx"
            app:layout_constraintEnd_toStartOf="@id/input_by_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_ax_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_bx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_by_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/by"
            app:layout_constraintBaseline_toBaselineOf="@id/input_bx_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_bx_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cx_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cx"
            app:layout_constraintEnd_toStartOf="@id/input_cy_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_bx_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_cx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cy_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cy"
            app:layout_constraintBaseline_toBaselineOf="@id/input_cx_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_cx_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_cy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textAppearance="@style/TextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
